@@ -212,6 +212,7 @@
 					<OPTION VALUE="{$netdevices[netdev].id}" {if $netdevices[netdev].id==$netdevice}SELECTED{/if}>{$netdevname|truncate:120:"...":true}</OPTION>
 					{/section}
 				</SELECT>
+				<a href="javascript: void(0);" onClick="return netdevfrommapchoosewin(document.nodelink.elements['devid']);" {tip text="Click to select network device from map"}>&raquo;&raquo;&raquo;</A>
 				<INPUT type="text" name="port" value="{if $nodeinfo.port}{$nodeinfo.port}{/if}" size="2" {tip text="Enter port number in device (optional)" trigger="port"}>
 				<BR>
 				<SELECT name="linktype" id="linktype" {tip trigger="linktype" text="Select link type"} onchange="change_linktype(this.options[this.selectedIndex].value)">
