@@ -9,6 +9,7 @@ version ?.??.?? (????-??-??):
   - added link technology and bandwidth support for radio sectors [chilan]
   - userpanel: we can enable/disable modules from lms user interface [chilan]
   - added connection type (PPPoE, DHCP, EAP) in nodes [nicraM Marcin Romanowski]
+  - added network device selection from map [chilan]
 
 version 1.11.16 (2015-03-31):
 
